Add User model and create sign in and sign up functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+  <% if current_user %>
+    <h4>Logged in as: <%=current_user.username%></h4>
+  <% end %>
     <%= yield %>
   </body>
 </html>
